# bottle_ENv

./: .dockerignore  .env.example  .gitignore  CITATION.bib  CONTRIBUTING.md  Dockerfile  LEADERBOARD.md  LICENSE  PLAN.md  README.md  SUBMISSION_SUMMARY.md  client.py  demo.py  inference.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.ps1
.claude/commands/: deploy-env.md  implement-env.md  init-env.md  integrate-rl.md  test-env.md  ui.md
.github/workflows/: docker.yml  test.yml
clinical_bench/: README.md  __init__.py  client.py  openenv.yaml  pyproject.toml
clinical_bench/server/: __init__.py  app.py  environment.py  requirements.txt  sandbox.py
clinical_bench/server/tasks/: __init__.py  biocoder.py  biostat_power.py
commands/: debug-env.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  CRTTvShell.jsx  styles.css
scripts/: generate_leaderboard.py  validate-submission.sh  visualize_results.py
server/: ai_routes.py  app.py  environment.py  models.py
server/tasks/: base.py  clinical_calc.py
tests/: test_graders.py
